# HelloFitty

./: .clang-format  .clang-tidy  .codespellrc  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Config.cmake.in  README  README.md  config.h.in
.github/workflows/: CI.yml  c++11.yml  c++14.yml  c++17.yml  c++standards.yml  ci.yml  clang-format-check.yml  configurations.yml  coveralls.yml  sys_checks.yml
cmake/: abi-dump-targets.cmake  coverage.cmake  dev-mode.cmake  docs-ci.cmake  docs.cmake  find_or_fetch_package.cmake  install-config.cmake  install-rules.cmake  lint-targets.cmake  lint.cmake  spell.cmake  variables.cmake
docs/: Doxyfile.in
example/: CMakeLists.txt  example1.cpp  example1.cxx  example1.hpp  example1a.cpp  example1b.cpp  example1c.cpp  example2.cpp  example2.cxx  example3.cpp
examples/: CMakeLists.txt  config.h.in  example.cxx  example1.cxx  example2.cxx
inc/: FitterFactory.h  LinkDef.h  details.hpp  parser.hpp
include/: FitterFactory.h  fitemall.hpp  hellofitty.hpp
source/: FitterFactory.cpp  draw_opts.cpp  entry.cpp  fit_entry.cpp  fitemall.cpp  fitter.cpp  hellofitty.cpp  param.cpp  parser_v1.cpp  parser_v2.cpp
src/: FitterFactory.cxx
test/: CMakeLists.txt  tests_FitterFactory.cpp  tests_FitterFactoryTools.cpp  tests_HistogramFit.cpp  tests_Param.cpp  tests_entry.cpp  tests_fit_entry.cpp  tests_fitemall.cpp  tests_fitemall_tools.cpp  tests_fitter.cpp  tests_hellofitty.cpp  tests_hellofitty_tools.cpp  tests_histogram_fit.cpp  tests_param.cpp  tests_parser_v1.cpp  tests_parser_v2.cpp
tests/: CMakeLists.txt  FitterFactoryCase_tests.cpp  test_input.txt  test_output.txt  tests_FitterFactory.cpp  tests_FitterFactoryTools.cpp  tests_HistogramFit.cpp  tests_HistogramFitParam.cpp  tests_Param.cpp  tests_ParamValue.cpp
